--- a/mackup/.mackup.cfg
+++ b/mackup/.mackup.cfg
@@ -1,8 +1,8 @@
 # Mackup config
 
 [storage]
-engine = dropbox
-directory = mackup
+engine = icloud
+directory = mackupm1
 
 # Apps to sync -- if empty, syncs all supported.
 # custom: personal-files, break, grammarly, iconjar, iterm2, moro, nginx,
@@ -12,19 +12,20 @@ personal-files
 aws
 caffeine
 gnupg
-grammarly
 iterm2
 keybase
 macosx
-nginx
+# See special config for this in .zshrc and ~/.mackup/oh-my-zsh.cfg
+oh-my-zsh
+p10k
 scripts
 ssh
 spectacle
 spotify-notifications
 spotify
 terminal
-ulysses
 vlc
+zsh
 
 # Apps to ignore -- handled by dotfiles or other reasons.
 [applications_to_ignore]
@@ -40,13 +41,9 @@ mysql
 nano
 pgsql
 oh-my-fish
-oh-my-zsh
 rails
-ruby-version
-ruby
 screen
-tmux
 vim
 wget
 xcode
-zsh
+
